Add page, results_per_page and number_of_results to paginated bids
